test/compile_errors/err_issue366_safe_wrapper_raw_ptr_precondition.w
//! expect-error: safe function relies on caller-guaranteed raw pointer validity

unsafe fn read_first(p: *const i32) -> i32:
    *p

fn wrapper(p: *const i32) -> i32:
    unsafe { read_first(p) }
